# ChenXuBlog

./: .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0da686ff5fbd_init.py  16d560dd93d3_fix_link_user_follows.py  4e1540346460_fix_user_follows.py  6ac087767374_init.py  c29d430fab68_fix_user_follows.py  c42e48b9c671_fix_user_follows.py  c4f7475cd89e_add_user_info.py  e666b2d0e443_fix_link_user_follows.py  ed285cf70138_fix_link_table.py
backend/src/: app.py  database.py  logger.py
backend/src/backend/: __init__.py  config.py  database.py  logger.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/backend/model/: action.py  blog.py  comment.py  user.py
backend/src/backend/router/: __init__.py
backend/src/backend/router/v1/: admin.py  auth.py  blog.py  comment.py  img_bed.py  permission.py  register.py  token.py  user.py
backend/src/backend/schema/: admin.py  auth.py  blog.py  comment.py  permission.py  user.py
backend/src/backend/service/: email.py
backend/src/backend/util/: jwt.py  permission.py
backend/src/backend/utils/: first_start.py  jwt.py  permission.py
backend/src/backend/utils/permission/: __init__.py  manager.py  permission_decorator.py
backend/tests/: __init__.py
frontend/: Dockerfile  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
(+64 files in other folders)
