[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "XuChenXu", email = "91937041+ChenXu233@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.40",
    "databases>=0.9.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
