[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "XuChenXu", email = "91937041+ChenXu233@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.40",
    "databases>=0.9.0",
    "loguru>=0.7.3",
    "toml>=0.10.2",
    "pydantic-settings>=2.9.1",
    "Werkzeug>=3.1.3",
    "aiosqlite>=0.21.0",
    "PyJWT>=2.10.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "pdm run main.py"
dev = "pdm run uvicorn main:APP --reload --port 8080 --host 127.0.0.1"
server = "pdm run uvicorn main:APP --port 8080 --host 0.0.0.0"

[dependency-groups]
dev = ["pre-commit>=4.2.0"]

[tool.ruff]
ignore = [
    "E402", # import not at top of file
    "E501", # line too long (82 > 79 characters)
]
